// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando en el <CategoryGifGrid /> Debe de mostrarse correctamente 1`] = `
<div>
  <h3>
    Category 
    Mamberroi
  </h3>
  <p
    className="animate__animated animated__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid"
  />
</div>
`;

exports[`Probando en el <CategoryGifGrid /> debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<div>
  <h3>
    Category 
    Mamberroi
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={1}
      key="1https://hola.jpg"
      title="https://hola.jpg"
      url="Cualquier cosa"
    />
  </div>
</div>
`;
